fix intro title line height on mobile

--- a/assets/sass/_home.scss
+++ b/assets/sass/_home.scss
@@ -45,6 +45,7 @@ body.home .header {
             @media screen and (max-width: 760px) {
                 font-size: 24px;
                 margin-top: 20px;
+                line-height: 28.8px;
             }
         }
     
