--- a/style.css
+++ b/style.css
@@ -325,6 +325,7 @@ body.home .header {
   #page-home .banner .intro_title {
     font-size: 24px;
     margin-top: 20px;
+    line-height: 28.8px;
   }
 }
 #page-home .banner .intro_quote {
